# algo-trading-system

./: .gitignore  main.py  pyproject.toml
notes/: architecture.md
src/: connect.py
src/broker/: angelone_broker.py  base_broker.py
src/data/: market_data.py
src/strategy/: orb_strategy.py
